# DG-MPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: yellowstone_build_directions.md
examples/euler/3D/isentropic_vortex/: README.md  input.toml  post.sh  regression_data.txt  run.sh  runslurm_cpu.sh  runslurm_gpu.sh
examples/euler/3D/isentropic_vortex/meshes/: download_mesh_pkg.py
examples/gaussian_bump_projection/: convergence.py  input.toml  post.sh  run.sh
examples/hex_1x1x1/: hex_1x1x1.h5  input.toml
examples/io/: sample_parallel.cpp  sample_serial.cpp
examples/isentropic_vortex/: convergence.py  input.toml  run.sh  runslurm_cpu.sh  runslurm_gpu.sh
examples/quad_1x1/: README.md  clean.sh  input.toml  quad_1x1.h5  run.sh
examples/quad_2x2/: README.md  input.toml  run.sh
src/common/: README.md  defines.h  enums.h  my_exceptions.h
src/converter/: CMakeLists.txt  README.md  main.cpp
src/exec/: CMakeLists.txt  README.md  main.cpp  run_tests.sh
src/io/: CMakeLists.txt  HDF5Wrapper.H  HDF5Wrapper.h  README.md  input_info.cpp  input_info.h  io_params.cpp  io_params.h  plot_mesh.py  reader.h  writer.cpp  writer.h
src/math/: README.md  linear_algebra.cpp  linear_algebra.h
src/memory/: CMakeLists.txt  README.md  dumb.cpp  dumb.h  memory_network.cpp  memory_network.h
src/mesh/: CMakeLists.txt  README.md  mesh.cpp  mesh.h  tools.cpp  tools.h
src/numerics/: CMakeLists.txt  README.md  nodes.cpp  nodes.h  numerics_data.cpp  numerics_data.h
src/numerics/basis/: basis.cpp  basis.h  shape.cpp  shape.h  tools.cpp  tools.h
src/numerics/quadrature/: hexahedral.h  hexahedron.cpp  hexahedron.h  quadrature.h  quadrilateral.cpp  quadrilateral.h  segment.cpp  segment.h  segments.cpp  tools.cpp  tools.h
src/numerics/timestepping/: stepper.cpp  stepper.h  tools.h
src/others/: README.md  ubuntu-cpu.sh  yellowstone-cpu.sh  yellowstone-gpu.sh
src/physics/: CMakeLists.txt  README.md
src/physics/base/: CMakeLists.txt  base.cpp  base.h  data.cpp  data.h  functions.cpp  functions.h
src/physics/euler/: CMakeLists.txt  euler.cpp  euler.h  functions.cpp  functions.h
src/post/: CMakeLists.txt  README.md  main.cpp
src/solver/: CMakeLists.txt  README.md  base.cpp  base.h  flux_functors_impl.h  helpers.cpp  helpers.h  tools.cpp  tools.h
src/utils/: CMakeLists.txt  README.md  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp  test_hello.cpp  test_mesh.cpp  test_physics.cpp
test/math/: test_linear_algebra.cpp
test/mesh/: test_mesh.cpp
test/mpi_enabled_tests/: main.cpp
test/mpi_enabled_tests/memory/: CMakeLists.txt  test_memory_network.cpp  test_memory_network.h
test/mpi_enabled_tests/mesh/: CMakeLists.txt  quad_2x2.h5  test_mesh.cpp  test_mesh.h
test/mpi_enabled_tests/solver/: CMakeLists.txt  input.toml  quad_2x2.h5  test_helpers.cpp  test_helpers.h
test/numerics/: test_nodes.cpp
test/numerics/basis/: test_basis.cpp  test_tools.cpp
test/numerics/quadrature/: test_quadrature.cpp
test/sanity_checks/: sanity_check_1.cpp  sanity_function_pointers_on_gpu.cpp  sanity_mult_view_by_constant.cpp  sanity_multiple_operators.cpp  sanity_passintofunctor.cpp  sanity_scratchspace.cpp  sanity_simpleparallelfor.cpp
