# add_library(physics STATIC
#     base/base.cpp
#     # euler/data.cpp
#     # euler/functions.cpp
# )
#     # euler/euler.cpp
#     # base/data.cpp
#     # base/functions.cpp

# target_include_directories(physics PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/euler")
# target_include_directories(physics PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/base")

# target_link_libraries(physics PUBLIC Kokkos::kokkoscore
    # PUBLIC Kokkos::kokkoskernels)
